# chrono_machines

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  Gemfile  Makefile  README.md  Rakefile  benchmark_all_strategies.rb  benchmark_comparison.rb  benchmark_native.rb  chrono_machines.gemspec  chrono_machines_native.bundle  coss.toml  release-please-config.json
.github/workflows/: main.yml  publish-gem.yml  release.yml  test-multiarch-publish.yml  test.yml
chrono_machines_native.bundle.dSYM/Contents/: Info.plist
chrono_machines_native.bundle.dSYM/Contents/Resources/DWARF/: chrono_machines_native.bundle
chrono_machines_native.bundle.dSYM/Contents/Resources/Relocations/aarch64/: chrono_machines_native.bundle.yml
ext/chrono_machines_native/: Cargo.toml  extconf.rb
ext/chrono_machines_native/core/: CHANGELOG.md  Cargo.toml  README.md
ext/chrono_machines_native/core/examples/: blocking_retry.rs
ext/chrono_machines_native/core/src/: backoff.rs  dsl.rs  lib.rs  policy.rs  retry.rs  sleep.rs
ext/chrono_machines_native/ffi/: CHANGELOG.md  Cargo.toml  extconf.rb
ext/chrono_machines_native/ffi/src/: lib.rs
lib/: chrono_machines.rb
lib/chrono_machines/: async_support.rb  configuration.rb  dsl.rb  errors.rb  executor.rb  native_speedup.rb  test_helper.rb  version.rb
sig/: chrono_machines.rbs
test/: async_test.rb  chrono_machines_test.rb  executor_test.rb  jitter_factor_test.rb  test_helper.rb
