[package]
name = "chrono_machines"
version = "0.1.0"
edition = "2024"
authors = ["Abdelkader Boudih <terminale@gmail.com>"]
license = "MIT"
description = "Pure Rust exponential backoff and retry library with full jitter"
repository = "https://github.com/seuros/chrono_machines"
keywords = ["retry", "backoff", "exponential", "jitter", "resilience"]
categories = ["no-std", "algorithms"]
readme = "README.md"

[lib]
name = "chrono_machines"
crate-type = ["lib"]

[features]
default = ["std"]
std = ["rand/std", "rand/std_rng"]

[dependencies]
rand = { version = "0.8", default-features = false, features = ["small_rng"] }

[dev-dependencies]
