[package]
name = "chrono-machines"
version = "0.2.1"
edition = "2024"
authors = ["Abdelkader Boudih <terminale@gmail.com>"]
license = "MIT"
description = "Exponential, constant, and Fibonacci backoff retry library with full jitter support - no_std compatible"
repository = "https://github.com/seuros/chrono_machines"
keywords = ["retry", "backoff", "exponential", "jitter", "resilience"]
categories = ["no-std", "algorithms"]
readme = "README.md"

[lib]
name = "chrono_machines"
crate-type = ["lib"]

[features]
default = ["std"]
std = ["alloc", "rand/std", "rand/std_rng"]
alloc = []

[dependencies]
rand = { version = "0.9", default-features = false, features = ["small_rng", "os_rng"] }

[dev-dependencies]
