[package]
name = "chrono-machines"
version = "0.3.1"
edition = "2024"
authors = ["Abdelkader Boudih <terminale@gmail.com>"]
license = "MIT"
description = "Exponential, constant, and Fibonacci backoff retry library with full jitter support - no_std compatible"
repository = "https://github.com/seuros/chrono_machines"
keywords = ["retry", "backoff", "exponential", "jitter", "resilience"]
categories = ["no-std", "algorithms"]
readme = "README.md"

[lib]
name = "chrono_machines"
crate-type = ["lib"]

[features]
default = ["std"]
std = ["alloc", "rand/std", "rand/std_rng"]
alloc = []
async = ["std", "dep:async-trait"]

[dependencies]
rand = { version = "0.10", default-features = false, features = ["std_rng", "sys_rng"] }
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }
