[package]
name = "chrono_machines_native"
version = "0.3.0"
edition = "2024"
authors = ["Abdelkader Boudih <terminale@gmail.com>"]
license = "MIT"
description = "Ruby FFI binding for chrono_machines"
repository = "https://github.com/seuros/chrono_machines"
publish = false

[lib]
name = "chrono_machines_native"
crate-type = ["cdylib"]

[dependencies]
chrono-machines = { workspace = true, features = ["std"] }
magnus = "0.8.2"
rand = { workspace = true }
rb-sys = { version = "0.9.117", default-features = false, features = ["stable-api-compiled-fallback"] }

[features]
default = ["std"]
std = ["chrono-machines/std"]
